# Pyrly

./: README.md  setup.cfg  setup.py
.github/workflows/: test-python.yml
pyrly/: __init__.py
pyrly/stopwatch/: __init__.py
pyrly/work_history/: __init__.py
