[metadata]
name=pyrly
version=0.0.2

description = Package for beautiful verbose printing in python.
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/ccmorenosa/Pyrly.git

license = MIT license
license_files = LICENSE

author = Catalina Moreno
author_email = ccatamorenos@gmail.com
maintainer = Catalina Moreno
maintainer_email = ccatamorenos@gmail.com

[options]
packages = find:

[options.packages.find]
where=.
include=pyrly*

[options.entry_points]
console_scripts =
    pyrly-work = pyrly:main
